--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
+aiofiles==23.2.1
+aiosqlite==0.19.0
 annotated-types==0.5.0
 anyio==3.7.1
 click==8.1.6
+databases==0.8.0
+dnspython==2.4.2
+email-validator==2.0.0.post2
 exceptiongroup==1.1.2
 fastapi==0.100.1
+greenlet==2.0.2
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
 pydantic==2.1.1
 pydantic_core==2.4.0
 python-dotenv==1.0.0
+python-multipart==0.0.6
 PyYAML==6.0.1
 sniffio==1.3.0
+SQLAlchemy==1.4.49
 starlette==0.27.0
 typing_extensions==4.7.1
 uvicorn==0.23.1
