--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiofiles==23.2.1
 aiosqlite==0.19.0
+alembic==1.12.0
 annotated-types==0.5.0
 anyio==3.7.1
 click==8.1.6
@@ -12,6 +13,8 @@ greenlet==2.0.2
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
+Mako==1.2.4
+MarkupSafe==2.1.3
 pydantic==2.1.1
 pydantic_core==2.4.0
 python-dotenv==1.0.0
