--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aerich==0.7.2
 aiofiles==23.2.1
 aiosqlite==0.17.0
 alembic==1.12.0
@@ -5,6 +6,7 @@ annotated-types==0.5.0
 anyio==3.7.1
 click==8.1.6
 databases==0.8.0
+dictdiffer==0.9.0
 dnspython==2.4.2
 email-validator==2.0.0.post2
 exceptiongroup==1.1.2
@@ -16,9 +18,11 @@ idna==3.4
 iso8601==1.1.0
 Mako==1.2.4
 MarkupSafe==2.1.3
+motor==3.3.2
 pool==0.1.2.dev0
 pydantic==2.1.1
 pydantic_core==2.4.0
+pymongo==4.6.0
 pypika-tortoise==0.1.6
 python-dotenv==1.0.0
 python-multipart==0.0.6
@@ -27,6 +31,7 @@ PyYAML==6.0.1
 sniffio==1.3.0
 SQLAlchemy==1.4.49
 starlette==0.27.0
+tomlkit==0.12.1
 tortoise-orm==0.20.0
 typing_extensions==4.7.1
 uvicorn==0.23.1
